# libmcnbt

./: .gitignore  CMakeLists.txt  README
src/: mcnbt.c  mcnbt.h  parser.c  serializer.c  tree.c  tree.h  util.c  util.h  walker.c
